clusters/home/apps/media/radarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`radarr.home.arpa`)
      services:
        - name: radarr
          port: 80
